// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Components) _Sprite should return null when the Sprite is not loaded 1`] = `
<Sprite
  id="some-id"
  viewBox="0 0 25 25"
>
  <span
    className="svg-placeholder svg-sprite"
  />
</Sprite>
`;

exports[`(Components) _Sprite should return the svg when the Sprite is loaded 1`] = `
<Sprite
  id="some-id"
  viewBox="0 0 25 25"
>
  <svg
    className="svg-sprite"
    role="img"
    viewBox="0 0 25 25"
  >
    <use
      xlinkHref="#some-id"
    />
  </svg>
</Sprite>
`;
